# polymarket_lp_tool

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run_copy_bot.py
passive_liquidity/: account_portfolio.py  main_loop.py  telegram_command_poller.py  telegram_live_queries.py  telegram_notifier.py
passive_liquidity/copy_trading/: config.py  main_loop.py  order_replicator.py  target_monitor.py
